--- a/SN.FreshDesk.Models/SN.FreshDesk.Models.csproj
+++ b/SN.FreshDesk.Models/SN.FreshDesk.Models.csproj
@@ -54,6 +54,9 @@
     <Compile Include="note.cs" />
     <Compile Include="post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+	<Compile Include="..\Dependencies\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="forum.cs" />
     <Compile Include="Requests\request_forum.cs" />
     <Compile Include="Requests\request_update_ticket.cs" />
